kiln_control/assets/css/kiln_control.css
body {
    background: #5d5145;
    font-family: Arial, sans-serif;
}

#status {
    display: flex;
    background: #000000;
    flex-wrap: wrap; /* Allows items to wrap onto multiple lines if needed */
    justify-content: space-between; /* Spreads out the items evenly */
    margin-top: 15px;
    color: #272786;
    border-radius: 5px;
    border: 1px solid #dddddd;
}


#progress {
    background: #5d5145;
    border-radius: 5px;
    padding: 5px 30px 5px 47px;
    border: 1px solid #dddddd;

}

.status-item {
    flex-basis: calc(25% - 20px); /* Adjusts each item's base width */
    margin: 10px; /* Provides spacing between items */
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center; /* Centers text within each status item */
}

.ds-title {
    font-size: 1em; /* Adjust font size as needed */
    margin-bottom: 5px; /* Spacing between title and data */
    color: #8e8ea8;
}

.display {
    font-size: 2.5em;
    line-height: 1.2em;
    color: #4897de;
}

.ds-target {
    color: #75890c;
}

#cost {
    color: #ad6b6b;
}

#act_temp {
    color: #d8d3c5;
}

.ds-unit {
    font-family: "Arial", sans-serif;
    font-size: .6em;
    vertical-align: top;
    line-height: 32px;
    color: #d8d3c5;
    margin-left: 4px;
}

#target_temp_scale {
    color: #75890c;
}


.ds-state {
    font-family: "Arial", sans-serif;
    font-size: 2em;
    vertical-align: top;
    line-height: 32px;
    color: #d8d3c5;
    margin-left: 4px;
}

/* For smaller screens */
@media (max-width: 768px) {
    .ds-title {
        font-size: 1em; /* Smaller font size */
        padding: 3px; /* Reduced padding */
    }

    .display {
        font-size: 1.5em; /* Smaller font size */
        padding: 3px; /* Reduced padding */
    }
}

.ds-input {
    color: #111111;
    font-family: "Digi", monospace;
    font-size: 24px;
    box-shadow: inset 0 0 12px 0 #737270;
    text-align: right;
    padding: 0 7px 0 0;

}

.bar {
    width: 70%;
/ / padding: 2 px 2 px 0 px 2 px;
/ / display: block;
    display: inline-block;
    font-family: arial, sans-serif;
    font-size: 12px;
    background-color: #ca3c38;
    color: #000;
/ / position: absolute;
/ / bottom: 0;
}

.ds-led-hazard-active {
    color: rgb(255, 204, 0);
    background: radial-gradient(ellipse at center, rgba(242, 195, 67, 1) 0%, rgba(241, 218, 54, 0.26) 100%); /* W3C */
}

.ds-led-heat-active {
    color: rgb(214, 42, 0);
    background: radial-gradient(ellipse at center, rgba(214, 25, 25, 1) 0%, rgba(214, 42, 0, 0.26) 100%); /* W3C */
}

.ds-trend {
    top: 0;
    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.25), -1px -1px 0 rgba(0, 0, 0, 0.4);
    color: rgb(233, 233, 233);
    font-size: 20px;
}

.ds-text {
    border: none;
    width: initial;
    font-family: sans-serif;
    font-size: 32px;
}

.progress {
    background: #3f3e3a;
    border-color: #000000;
    border-top: 1px solid #b9b6af;
    margin: 0;
    -webkit-border-radius: 0 0 7px 7px;
}

.progress-bar {
    background-color: #75890c;
    font-family: "Digi", monospace;
    font-size: 16px;
}


.panel-default {
    border-radius: 7px;
    box-shadow: 0 0 1.1em 0 rgba(0, 0, 0, 0.55);
    margin-top: 15px;
    background: #3F3E3A;
}

.panel-heading {
    background: #fafafa url('//assets/images/page_bg.png') repeat-x;
    overflow: hidden;
    padding: 10px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.panel-body {
    box-shadow: inset 0 0 42px 0 #000;
    border-bottom-left-radius: 7px;
    border-bottom-right-radius: 7px;
    background: rgba(0, 0, 0, 0.2)
}

#profile_selector {
    border: 1px solid rgb(194, 194, 194);
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    background: rgb(229, 229, 229);
    background: linear-gradient(to bottom, rgba(229, 229, 229, 1) 0%, rgba(255, 255, 255, 1) 100%);
    padding: 3px 5px;
    box-shadow: 0 0 1.1em 0 rgba(0, 0, 0, 0.05), inset 0 0 0 0 #000;
}

.select2-container {
    position: relative;
    top: -3px;
    width: 190px;
    height: 34px;
}

.select2-container .select2-choice {
    line-height: 32px;
}

.graph {
    width: 100%;
    height: 600px;
    font-size: 14px;
    line-height: 1.2em;
}

.edit-points {
    margin-bottom: 5px;
}

.edit-points h3 {
    margin-top: 5px;
    margin-bottom: 15px;
}

.edit-points .row {
    margin-bottom: 5px;
}

.btn-success {
    background: rgb(164, 179, 87);
    background: linear-gradient(to bottom, rgba(164, 179, 87, 1) 0%, rgba(117, 137, 12, 1) 100%);
    background-color: #75890c;
}

.modal-content {
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
}

.modal-body {
    background: #fafafa;
}

.modal-footer {
    margin-top: 0;
}

.modal-body .table {
    margin-bottom: 0;
}

.select2-container .select2-choice {
    height: 34px;
    margin-top: 1px;
}

.modal.fade.in {
    top: 10%;
}

.alert {
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
    background-repeat: repeat-x;
    box-shadow: 0 0 1.1em 0 rgba(0, 0, 0, 0.75);
}

.alert-success {
    background: rgb(164, 179, 87);
    background: linear-gradient(to bottom, rgba(164, 179, 87, 1) 0%, rgba(117, 137, 12, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a4b357', endColorstr='#75890c', GradientType=0);
    color: #fff;
}

.alert-error {
    background: rgb(206, 57, 20);
    background: linear-gradient(to bottom, rgba(206, 57, 20, 1) 0%, rgba(163, 38, 0, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce3914', endColorstr='#a32600', GradientType=0);
    color: #fff;
}

.modal-body td {
    width: 50%;
}

.table-responsive {
    overflow-x: hidden;
    overflow-y: hidden;
}

